Fix misleading `##pedigreeDB=<url>` notation in older VCF specifications
PR #88 removed the `<>` from `##pedigreeDB=<url>` in VCFv4.3.tex,
presumably on the grounds that they were merely metasyntactic variable
notation and not intended to appear literally. As some readers still
refer to these older documents, remove the misleading notation here too.

--- a/VCFv4.2.tex
+++ b/VCFv4.2.tex
@@ -153,7 +153,7 @@ It is possible to record relationships between genomes using the following synta
 \end{verbatim}
 or a link to a database:
 \begin{verbatim}
-##pedigreeDB=<url>
+##pedigreeDB=URL
 \end{verbatim}
 \subsection{Header line syntax}
 The header line names the 8 fixed, mandatory columns. These columns are as follows:
@@ -910,7 +910,7 @@ Let's consider a cancer patient VCF file with 4 genomes: germline, primary\_tumo
 Alternately, if data on the genomes is compiled in a database, a simple pointer can be provided:
 
 \begin{verbatim}
-##pedigreeDB=<url>
+##pedigreeDB=URL
 \end{verbatim}
 
 The most general form of a pedigree line is:
