--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -232,10 +232,11 @@ the following ones reserved:
 \end{itemize}
 
 For example:
+{\scriptsize
 \begin{verbatim}
-##contig=<ID=ctg1,length=81195210,URL=ftp://somewhere.org/assembly.fa,md5=f126cdf8a6e0c7f379d618ff66beb2da,...>
+##contig=<ID=ctg1,length=81195210,URL=ftp://example.com/assembly.fa,md5=f126cdf8a6e0c7f379d618ff66beb2da,...>
 \end{verbatim}
-
+}
 \noindent
 Contig names follow the same rules as the SAM format's reference sequence names:
 they may contain any printable ASCII characters in the range \verb|[!-~]| apart from `{\tt\verb|\|\,,\,"`'\,()\,[]\,\verb|{}|\,<>}' and may not start with `{\tt *}' or `{\tt =}'.
