--- a/pub/ga4gh_and_TRUNC512_identifiers.ipynb
+++ b/pub/ga4gh_and_TRUNC512_identifiers.ipynb
@@ -1,49 +1,33 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "ga4gh and TRUNC512 identifiers.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
-        "id": "4NGNYMqdydGo",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "4NGNYMqdydGo"
       },
+      "outputs": [],
       "source": [
         "# Importing the 3 libraries we need\n",
         "import base64\n",
         "import hashlib\n",
         "import binascii"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
-        "id": "nGmff8YsygCE",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "nGmff8YsygCE"
       },
+      "outputs": [],
       "source": [
         "# All required methods for translating sequences to the **ga4gh identifier** \n",
         "# space and the **now retired** TRUNC512 scheme\n",
-        "\n",
-        "def trunc512_digest(seq, offset=24):\n",
-        "    digest = hashlib.sha512(seq.encode('utf-8')).digest()\n",
-        "    hex_digest = binascii.hexlify(digest[:offset])\n",
-        "    return hex_digest.decode(\"utf-8\") \n",
         "\n",
         "def ga4gh_digest(seq, digest_size=24):\n",
         "    # b64 encoding results in 4/3 size expansion of data and padded if\n",
@@ -52,12 +36,17 @@
         "    digest = hashlib.sha512(seq.encode('utf-8')).digest()\n",
         "    return _ga4gh_format(digest, digest_size)\n",
         "\n",
+        "def trunc512_digest(seq, offset=24):\n",
+        "    digest = hashlib.sha512(seq.encode('utf-8')).digest()\n",
+        "    hex_digest = binascii.hexlify(digest[:offset])\n",
+        "    return hex_digest.decode(\"utf-8\") \n",
+        "\n",
         "def _ga4gh_format(digest, digest_size=24):\n",
         "    tdigest_b64us = base64.urlsafe_b64encode(digest[:digest_size])\n",
         "    return \"ga4gh:SQ.{}\".format(tdigest_b64us.decode(\"utf-8\"))\n",
         "\n",
-        "def ga4gh_to_trunc512(vmc):\n",
-        "    base64_strip = vmc.replace(\"ga4gh:SQ.\",\"\")\n",
+        "def ga4gh_to_trunc512(ga4gh):\n",
+        "    base64_strip = ga4gh.replace(\"ga4gh:SQ.\",\"\")\n",
         "    digest = base64.urlsafe_b64decode(base64_strip)\n",
         "    hex_digest = binascii.hexlify(digest)\n",
         "    return hex_digest.decode(\"utf-8\") \n",
@@ -66,56 +55,78 @@
         "    digest_length = len(trunc512)*2\n",
         "    digest = binascii.unhexlify(trunc512)\n",
         "    return _ga4gh_format(digest, digest_length)"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3xOb208fzZwR",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "3xOb208fzZwR"
       },
       "source": [
-        "Output from the various functions. We show the creation of the TRUNC512 digest, the ga4gh identifier and how you can move between the two schemes with minimal effort."
+        "Output from the various functions. We show the creation of the GA4GH identifier. We also show how you can move between this and the deprecated scheme TRUNC512."
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
-        "id": "T3TbPlZmyj0e",
-        "colab_type": "code",
-        "outputId": "9d75e01d-56fc-42da-ca68-884c39a95cb6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
-        }
+        },
+        "colab_type": "code",
+        "id": "T3TbPlZmyj0e",
+        "outputId": "9d75e01d-56fc-42da-ca68-884c39a95cb6"
       },
-      "source": [
-        "print(\"TRUNC512 digest: {}\".format(trunc512_digest('ACGT')))\n",
-        "print(\"TRUNC512 digest +2 bits: {}\".format(trunc512_digest('ACGT', 26)))\n",
-        "print(\"\")\n",
-        "print(\"ga4gh identifier: {}\".format(ga4gh_digest('ACGT')))\n",
-        "print(\"TRUNC512 {} can be translated to {}\".format(trunc512_digest('ACGT'), trunc512_to_ga4gh(trunc512_digest('ACGT'))))\n",
-        "print(\"\")\n",
-        "print(\"Empty digest: {}\".format(ga4gh_digest(\"\")))"
-      ],
-      "execution_count": 21,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
-            "TRUNC512 digest: 68a178f7c740c5c240aa67ba41843b119d3bf9f8b0f0ac36\n",
-            "TRUNC512 digest +2 bits: 68a178f7c740c5c240aa67ba41843b119d3bf9f8b0f0ac36cf70\n",
+            "GA4GH identifier: ga4gh:SQ.aKF498dAxcJAqme6QYQ7EZ07-fiw8Kw2\n",
+            "GA4GH identifier +3 bits: ga4gh:SQ.aKF498dAxcJAqme6QYQ7EZ07-fiw8Kw2z3Ad\n",
             "\n",
-            "ga4gh identifier: ga4gh:SQ.aKF498dAxcJAqme6QYQ7EZ07-fiw8Kw2\n",
-            "TRUNC512 68a178f7c740c5c240aa67ba41843b119d3bf9f8b0f0ac36 can be translated to ga4gh:SQ.aKF498dAxcJAqme6QYQ7EZ07-fiw8Kw2\n",
+            "A deprecated/legacy TRUNC512 68a178f7c740c5c240aa67ba41843b119d3bf9f8b0f0ac36 can be translated to GA4GH ga4gh:SQ.aKF498dAxcJAqme6QYQ7EZ07-fiw8Kw2\n",
             "\n",
-            "Empty digest: ga4gh:SQ.z4PhNX7vuL3xVChQ1m2AB9Yg5AULVxXc\n"
-          ],
-          "name": "stdout"
+            "Empty GA4GH identifier: ga4gh:SQ.z4PhNX7vuL3xVChQ1m2AB9Yg5AULVxXc\n"
+          ]
         }
+      ],
+      "source": [
+        "print(\"GA4GH identifier: {}\".format(ga4gh_digest('ACGT')))\n",
+        "print(\"GA4GH identifier +3 bits: {}\".format(ga4gh_digest('ACGT', 27)))\n",
+        "print(\"\")\n",
+        "\n",
+        "print(\"A deprecated/legacy TRUNC512 {} can be translated to GA4GH {}\".format(trunc512_digest('ACGT'), trunc512_to_ga4gh(trunc512_digest('ACGT'))))\n",
+        "print(\"\")\n",
+        "print(\"Empty GA4GH identifier: {}\".format(ga4gh_digest(\"\")))"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "ga4gh and TRUNC512 identifiers.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.4"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
