Add VCF4.3 to VCF4.4 change list Also add VCF4.1 to VCF4.2 change list

--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -2150,4 +2150,10 @@ Therefore, also \#\#PEDIGREE newly requires a unique ID.
 \item The implicit filter PASS was described inconsistently throughout BCFv2.1: It is encoded as the first entry in the dictionary, not the last.
 \end{itemize}
 
+\subsection{Changes between VCFv4.1 and VCFv4.2}
+\begin{itemize}
+\item In the HEADER the INFO definition allow additional field after the 4 first mandatory fields
+\item Allow star allele in the ALT for describing upstream deletion
+\end{itemize}
+
 \end{document}
