--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -809,9 +809,9 @@ That is, a J claim must not be made on a CNV record even if the corresponding st
 \label{sv-format-keys}
 \footnotesize
 \begin{verbatim}
-##FORMAT=<ID=CN,Number=1,Type=Integer,Description="Copy number genotype for imprecise events">
-##FORMAT=<ID=CNQ,Number=1,Type=Float,Description="Copy number genotype quality for imprecise events">
-##FORMAT=<ID=CNL,Number=G,Type=Float,Description="Copy number genotype likelihood for imprecise events">
+##FORMAT=<ID=CN,Number=1,Type=Integer,Description="Copy number">
+##FORMAT=<ID=CNQ,Number=1,Type=Float,Description="Copy number genotype quality">
+##FORMAT=<ID=CNL,Number=G,Type=Float,Description="Copy number genotype likelihood">
 ##FORMAT=<ID=CNP,Number=G,Type=Float,Description="Copy number posterior probabilities">
 ##FORMAT=<ID=NQ,Number=1,Type=Integer,Description="Phred style probability score that the variant is novel">
 ##FORMAT=<ID=HAP,Number=1,Type=Integer,Description="Unique haplotype identifier">
