Address Review comments.

--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -2153,6 +2153,7 @@ Therefore, also \#\#PEDIGREE newly requires a unique ID.
 \subsection{Changes between VCFv4.1 and VCFv4.2}
 \begin{itemize}
 \item In the HEADER the INFO definition allow additional field after the 4 first mandatory fields
+\item INFO fields definition can use Number=R to specify one per allele including the reference.
 \item Allow star allele in the ALT for describing upstream deletion
 \end{itemize}
 
